--- a/css/styles3.css
+++ b/css/styles3.css
@@ -1,5 +1,5 @@
 #body {
-	background: url('bg1.jpg');
+	background: url('https://cdn.imweb.me/upload/S2022030222ee0b2e93de0/495bbe0c19451.jpg');
 	background-size: cover;
 }
 
