--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,8 @@ body {
 	background: #2224f4;
 }
 
-body, html {
+body,
+html {
 	margin: 0;
 }
 
@@ -11,7 +12,11 @@ body, html {
 	margin-right: 130px;
 }
 
-#click1,#click2,#click3,#click4 {
+
+#click1,
+#click2,
+#click3,
+#click4 {
 	font-size: 4vw;
 	font-weight: 700;
 	font-family: SUIT;
@@ -20,7 +25,13 @@ body, html {
 	border: 0.1em solid white;
 }
 
-#text2,#text3,#text4,#click2,#click3,#click4 {
+
+#text2,
+#text3,
+#text4,
+#click2,
+#click3,
+#click4 {
 	display: none;
 	margin-left: 5px;
 }
@@ -50,4 +61,42 @@ span {
 
 p {
 	margin: 30px;
+}
+
+
+@media screen and (max-width: 900px) {
+	.text {
+		margin-left: 50px;
+		margin-right: 40px;
+	}
+
+	#click1,
+	#click2,
+	#click3,
+	#click4 {
+		font-size: 8.1vw;
+		font-weight: 700;
+		font-family: SUIT;
+		color: transparent;
+		background: transparent;
+		border: 0.1em solid white;
+	}
+
+	h1 {
+		margin-top: 80px;
+		font-size: 9vw;
+		font-family: SUIT;
+		font-weight: 700;
+		color: white;
+		line-height: 1.7;
+	}
+
+	span {
+		color: #2224f4;
+		background: white;
+		padding: 3px 7px;
+		font-family: SUIT;
+		font-weight: 700;
+		letter-spacing: -0.5px;
+	}
 }
