--- a/css/styles2.css
+++ b/css/styles2.css
@@ -2,7 +2,8 @@
 	background: #2224f4;
 }
 
-body, html {
+body,
+html {
 	margin: 0;
 }
 
@@ -11,7 +12,11 @@ body, html {
 	margin-right: 130px;
 }
 
-#click1,#click2,#click3,#click4,#click5 {
+#click1,
+#click2,
+#click3,
+#click4,
+#click5 {
 	font-size: 4.1vw;
 	font-weight: 700;
 	font-family: SUIT;
@@ -21,7 +26,14 @@ body, html {
 	mix-blend-mode: difference;
 }
 
-#text2,#text3,#text4, #text5,#click2,#click3,#click4,#click5 {
+#text2,
+#text3,
+#text4,
+#text5,
+#click2,
+#click3,
+#click4,
+#click5 {
 	display: none;
 	margin-left: 5px;
 }
@@ -40,7 +52,11 @@ h1 {
 	line-height: 1.7;
 }
 
-#text1,#text2,#text3,#text4,#text5 {
+#text1,
+#text2,
+#text3,
+#text4,
+#text5 {
 	color: black;
 	background: white;
 	padding: 5px 10px;
@@ -52,4 +68,27 @@ h1 {
 
 p {
 	margin: 30px;
+}
+
+@media screen and (max-width: 900px) {
+	.text {
+		margin-left: 1em;
+		margin-right: 0.7em;
+	}
+
+	#click1,
+	#click2,
+	#click3,
+	#click4 {
+		font-size: 8.8vw;
+	}
+
+	h1 {
+		margin-top: 1.5em;
+		font-size: 9.7vw;
+	}
+
+	span {
+		padding: 3px 7px;
+	}
 }
