--- a/css/styles3.css
+++ b/css/styles3.css
@@ -3,7 +3,8 @@
 	background-size: cover;
 }
 
-body, html {
+body,
+html {
 	margin: 0;
 }
 
@@ -12,7 +13,12 @@ body, html {
 	margin: 120px 60px;
 }
 
-#click1,#click2,#click3,#click4,#click5,#click6 {
+#click1,
+#click2,
+#click3,
+#click4,
+#click5,
+#click6 {
 	text-align: center;
 	font-size: 4vw;
 	font-weight: 700;
@@ -23,7 +29,16 @@ body, html {
 	mix-blend-mode: difference;
 }
 
-#text2,#text3,#text4,#text5,#text6,#click2,#click3,#click4,#click5,#click6 {
+#text2,
+#text3,
+#text4,
+#text5,
+#text6,
+#click2,
+#click3,
+#click4,
+#click5,
+#click6 {
 	display: none;
 	text-align: center;
 }
@@ -40,7 +55,12 @@ h1 {
 	line-height: 1.3;
 }
 
-#text1,#text2,#text3,#text4,#text5,#text6 {
+#text1,
+#text2,
+#text3,
+#text4,
+#text5,
+#text6 {
 	color: black;
 	background: white;
 	font-family: SUIT;
@@ -52,4 +72,35 @@ h1 {
 p {
 	margin: 20px;
 	padding: 0px;
+}
+
+@media screen and (max-width: 900px) {
+	.text {
+		margin: 1em 0.2em;
+	}
+
+	#click1,
+	#click2,
+	#click3,
+	#click4,
+	#click5,
+	#click6 {
+		font-size: 8vw;
+	}
+
+	h1 {
+		margin-top: 1.5em;
+		font-size: 9vw;
+	}
+
+	span {
+		padding: 3px 10px;
+	}
+
+	#body {
+		background: url('https://cdn.imweb.me/upload/S2022030222ee0b2e93de0/0e7314c227284.jpg');
+		background-size: cover;
+		background-position: center top;
+		background-repeat: no-repeat;
+	}
 }
