--- a/css/styles5.css
+++ b/css/styles5.css
@@ -2,7 +2,8 @@
 	background: #2224f4;
 }
 
-body, html {
+body,
+html {
 	margin: 0;
 }
 
@@ -41,4 +42,26 @@ h1 {
 	font-weight: 700;
 	letter-spacing: -0.5px;
 	text-align: center;
+}
+
+
+@media screen and (max-width: 900px) {
+
+	h1 {
+		padding-top: 0.7em;
+		margin: 3em 0.7em;
+		font-size: 12vw;
+	}
+
+	#click {
+		font-size: 14vw;
+		font-weight: 700;
+		font-family: SUIT;
+		color: transparent;
+		background: transparent;
+		border: 0.1em solid white;
+		margin-left: 2.25em;
+		margin-right: 2.25em;
+		margin-top: 1em;
+	}
 }
