--- a/css/styles2.css
+++ b/css/styles2.css
@@ -80,15 +80,20 @@ p {
 	#click2,
 	#click3,
 	#click4 {
-		font-size: 8.8vw;
+		font-size: 9.1vw;
 	}
 
 	h1 {
 		margin-top: 1.5em;
 		font-size: 9.7vw;
+		line-height: 1.8;
 	}
 
-	span {
+	#text1,
+	#text2,
+	#text3,
+	#text4,
+	#text5 {
 		padding: 3px 7px;
 	}
 }
