--- a/css/styles3.css
+++ b/css/styles3.css
@@ -1,6 +1,8 @@
-#body {
+#html {
 	background: url('https://cdn.imweb.me/upload/S2022030222ee0b2e93de0/495bbe0c19451.jpg');
 	background-size: cover;
+	background-position: center top;
+	background-repeat: no-repeat;
 }
 
 body,
