--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ h1 {
 span {
 	color: #2224f4;
 	background: white;
-	padding: px 10px;
+	padding: 5px 10px;
 	font-family: SUIT;
 	font-weight: 700;
 	letter-spacing: -0.5px;
