--- a/css/styles3.css
+++ b/css/styles3.css
@@ -23,7 +23,7 @@ html {
 #click5,
 #click6 {
 	text-align: center;
-	font-size: 4vw;
+	font-size: 4.5vw;
 	font-weight: 700;
 	font-family: SUIT;
 	color: transparent;
@@ -88,12 +88,12 @@ p {
 	#click4,
 	#click5,
 	#click6 {
-		font-size: 7.5vw;
+		font-size: 8.5vw;
 	}
 
 	h1 {
-		margin-top: 1.5em;
-		font-size: 8.2vw;
+		margin-top: 3em;
+		font-size: 8.5vw;
 	}
 
 	#text1,
@@ -109,7 +109,11 @@ p {
 		letter-spacing: -0.5px;
 		mix-blend-mode: difference;
 		padding: 5px 10px;
-		margin-bottom: 0.1em;
+	}
+
+	p {
+		margin: 0.3em;
+		padding: 0px;
 	}
 
 	#html {
